Light/dark mode fixes, code block fixes

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -106,6 +106,7 @@
 
 /* HERO STYLES */
 
+
 .hero {
   @apply flex flex-col gap-8;
 }
@@ -176,11 +177,11 @@ li {
 /* PAGINATION LINK STYLES */
 
 .pagination-links a {
-  @apply border-none text-sm shadow-none gap-[2px];
+  @apply border-none text-sm shadow-none gap-[2px] ;
 }
 
 .pagination-links svg {
-  @apply mt-6 !important;
+  @apply mt-5 !important;
 }
 
 .link-title {
@@ -296,6 +297,10 @@ mobile-starlight-toc .dropdown a {
 
 .sl-markdown-content code:not(:where(.not-content *)) {
   @apply bg-secondary rounded !important;
+}
+
+kbd {
+  @apply bg-secondary !important;
 }
 
 .expressive-code {
